--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
+  dots_indicator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -78,17 +80,12 @@ flutter:
   # example:
   
   fonts:
-    - family: Roboto
+    - family: Raleway
       fonts:
-       - asset: fonts/Roboto-Regular.ttf
-         weight: 400
-       - asset: fonts/Roboto-Mediumr.ttf
-         weight: 500
-       - asset: fonts/Roboto-Bold.ttf
-         weight: 700
-       - asset: fonts/Roboto-Black.ttf
-         weight: 900
-
+        - asset: assets/fonts/Raleway-Regular.ttf
+        - asset: assets/fonts/Raleway-Italic.ttf
+          style: italic
+    
   #   
   #
   # For details regarding fonts from package dependencies,
