--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+    get: ^4.1.4
+    cupertino_icons: ^1.0.2
+    google_fonts: ^4.0.3
+    dots_indicator: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
-  dots_indicator: ^2.1.0
+  
 
 dev_dependencies:
   flutter_test:
